--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ gmp-map
 { /*map Box */
 	height: 500px;
 }
-
 html, body 
 {
 	height: 100%;
@@ -10,17 +9,15 @@ html, body
 	margin: 0;
 	padding: 0;
 }
-
-#title 
+p
 {
-	color: #fff;
-	background-color: #4d90fe;
 	font-family: Verdana, sans-serif;
-	font-size: 25px;
-	font-weight: 500;
-	padding: 6px 12px;
 }
-
+button
+{
+	background-color: #00ebf7;
+	font-family: Verdana, sans-serif;
+}
 .pac-card 
 { /* search & radius */
 	background-color: #fff;
@@ -30,36 +27,40 @@ html, body
 	font: 400 18px Roboto, Arial, sans-serif;
 	overflow: hidden;
 }
-
+#save
+{
+	background-color: rgba(256, 256, 256, 0.0);;
+	outline: rgba(256, 256, 256, 0.0);
+}
+#title 
+{
+	color: #000000;
+	background-color: #f7df00;
+	font-family: Verdana, sans-serif;
+	font-size: 25px;
+	font-weight: 500;
+	padding: 6px 12px;
+}
 #place-picker 
 { /*search rectangle*/
 	box-sizing: border-box;
 	width: 100%;
 	padding: 0.5rem 1rem 1rem;
 }
-
 #radius-input-container 
 { 
 	display: flex;
 	align-items: center;
 	padding: 0 1rem 1rem;
 }
-
 #radius-input-label 
 {
 	margin-right: 0.5rem;
 }
-
 #radius-input 
 { 
 	width: 50px;
 }
-
-p
-{
-	font-family: Verdana, sans-serif;
-}
-
 #logo
 {
 	width: 50%;
